--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -8,7 +8,11 @@
 
 <div class="container">
   <% @cocktails.each do |cocktail| %>
+  <% if cocktail.photo.attached? %>
     <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path cocktail.photo.key, height: 300, width: 400, crop: :fill if cocktail.photo.attached? %>')">
+  <% else %>
+    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('https://images.unsplash.com/photo-1496318447583-f524534e9ce1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2605&q=80')">
+  <% end %>
       <%= link_to cocktail.name, cocktail_path(cocktail) %>
     </div>
   <% end %>
