--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,10 +1,18 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1572346411800-b4d741f3e84f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2689&q=80);">
+<% if @cocktail.photo.attached? %>
+  <div class="banner" style='background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(" <%= cl_image_path @cocktail.photo.key, height: 300, width: 400, crop: :fill %>");'>
+<% else %>
+    <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://images.unsplash.com/photo-1496318447583-f524534e9ce1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2605&q=80');">
+<% end %>
   <div class="container">
     <h1><%= @cocktail.name %></h1>
+    <%= link_to "Add a new dose", new_cocktail_dose_path(@cocktail) %>
+    <br>
+    <%= link_to "Back to cocktails", cocktails_path %>
   </div>
 </div>
 
 <div style="text-align: center; margin-top: 24px;">
+
 <ul style="width: 600px; margin: 0 auto; list-style: none">
   <% @cocktail.doses.each do |dose| %>
     <li>
@@ -15,21 +23,9 @@
                 method: :delete,
                 data: {confirm: 'Are you sure?'} %>
     <% end %>
-    <%= cl_image_tag @cocktail.photo.key, height: 300, width: 400, crop: :fill if @cocktail.photo.attached? %>
+
   </li>
 </ul>
-
-<br>
-<%= link_to "Add a new dose", new_cocktail_dose_path(@cocktail) %>
-<br>
-
-<%= simple_form_for @cocktail do |f| %>
-  <%= f.input :photo, as: :file %>
-  <%= f.submit "Upload your photo!" %>
-<% end %>
-
-<br>
-<%= link_to "Back to cocktails", cocktails_path %>
 
 </div>
 
