--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,7 +1,15 @@
-<h1>Create new cocktail</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-4 offset-sm-4">
+      <h1>Create new cocktail</h1>
 
-<%= simple_form_for @cocktail do |f| %>
-  <%= f.input :name %>
-  <%= f.input :photo, as: :file %>
-  <%= f.submit "Add your cocktail!" %>
-<% end %>
+      <%= simple_form_for @cocktail do |f| %>
+        <%= f.input :name %>
+        <%= f.input :photo, as: :file %>
+        <%= f.submit "Add your cocktail!" %>
+      <% end %>
+
+    </div>
+
+  </div>
+</div>
