--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -4,10 +4,15 @@
   </div>
 </div>
 
-
-<%= simple_form_for [@cocktail, @dose] do |f| %>
-  <%= f.association :ingredient, collection: Ingredient.order(:name) %>
-  <%= f.input :description %>
-  <%= f.submit "Add the dose!" %>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-4 offset-sm-4">
+      <%= simple_form_for [@cocktail, @dose] do |f| %>
+        <%= f.association :ingredient, collection: Ingredient.order(:name) %>
+        <%= f.input :description %>
+        <%= f.submit "Add the dose!" %>
+      <% end %>
+    </div>
+  </div>
+</div>
 
