--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -5,18 +5,14 @@
 }
 
 .banner h1 {
-  color: white;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  font-size: 60px;
-  font-weight: bold;
 }
 
-.banner p {
-  font-size: 20px;
-  color: white;
-  opacity: .7;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-}
+// .banner p {
+//   font-size: 20px;
+//   color: white;
+//   opacity: .7;
+//   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+// }
 
 .banner div {
   text-align: center;
@@ -24,7 +20,8 @@
   margin: 0, auto;
 }
 
-.banner a {
-  text-decoration: none;
-  color: white;
+.banner-buttons {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-around;
 }
