--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,17 +1,19 @@
 
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1572346411800-b4d741f3e84f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2689&q=80);">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.1), #1A1A1D), url(https://images.unsplash.com/photo-1572346411800-b4d741f3e84f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2689&q=80);">
   <div class="container">
     <h1>The Drinks Cabinet</h1>
-      <%= link_to 'Create new cocktail', new_cocktail_path %>
+    <div class="banner-buttons">
+      <%= link_to 'Create new cocktail', new_cocktail_path, :class => "button" %>
+    </div>
   </div>
 </div>
 
-<div class="container">
+<div class="cards">
   <% @cocktails.each do |cocktail| %>
   <% if cocktail.photo.attached? %>
     <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path cocktail.photo.key, height: 300, width: 400, crop: :fill if cocktail.photo.attached? %>')">
   <% else %>
-    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('https://images.unsplash.com/photo-1496318447583-f524534e9ce1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2605&q=80')">
+    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('https://images.unsplash.com/photo-1514447084304-976bcf033264?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80')">
   <% end %>
       <%= link_to cocktail.name, cocktail_path(cocktail) %>
     </div>
