--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,16 +1,19 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1572346411800-b4d741f3e84f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2689&q=80);">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.1), #1A1A1D), url(https://images.unsplash.com/photo-1572346411800-b4d741f3e84f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2689&q=80);">
   <div class="container">
     <h1>Add a dose to your <%= @cocktail.name %></h1>
+    <div class="banner-buttons">
+      <%= link_to "Back to your cocktail", cocktails_path, :class => "button"%>
+    </div>
   </div>
 </div>
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-4 offset-sm-4">
+    <div class="col-sm-4 offset-sm-4 form">
       <%= simple_form_for [@cocktail, @dose] do |f| %>
         <%= f.association :ingredient, collection: Ingredient.order(:name) %>
         <%= f.input :description %>
-        <%= f.submit "Add the dose!" %>
+        <%= f.submit "Add the dose!", :class => "button" %>
       <% end %>
     </div>
   </div>
