--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -23,7 +23,7 @@
 <table class="ingredients-table">
   <tr>
     <th>
-      <h3>Ingregients</h3>
+      <h3>Ingredients</h3>
     </th>
     <th>
       <%= link_to "Add a new dose", new_cocktail_dose_path(@cocktail) %>
